--- a/LM.Data.EF/LM.Data.EF.csproj
+++ b/LM.Data.EF/LM.Data.EF.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9B022C8D-8176-430F-A6B7-A347A75DC4F5}</ProjectGuid>
+    <ProjectGuid>{7043A305-809C-4346-841C-4C8ED45E646A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LM.Data</RootNamespace>
-    <AssemblyName>LM.Data</AssemblyName>
+    <RootNamespace>LM.Data.EF</RootNamespace>
+    <AssemblyName>LM.Data.EF</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -48,19 +48,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Context\LmContext.cs" />
-    <Compile Include="Mappings\EmployeeConfiguration.cs" />
-    <Compile Include="Mappings\EmployeeLeaveConfiguration.cs" />
-    <Compile Include="Mappings\LeaveConfiguration.cs" />
-    <Compile Include="Mappings\MonthlyLeaveConfiguration.cs" />
-    <Compile Include="Model\BaseEntity.cs" />
-    <Compile Include="Model\Employee.cs" />
-    <Compile Include="Model\EmployeeLeave.cs" />
-    <Compile Include="Model\Enums.cs" />
-    <Compile Include="Model\Holiday.cs" />
-    <Compile Include="Model\Leave.cs" />
-    <Compile Include="Model\MonthlyLeave.cs" />
+    <Compile Include="LMUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Contracts\" />
+    <Folder Include="Specifications\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LM.Data\LM.Data.csproj">
+      <Project>{9b022c8d-8176-430f-a6b7-a347a75dc4f5}</Project>
+      <Name>LM.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LM.Framework\LM.Framework.csproj">
+      <Project>{bf63f401-245a-44c8-af1a-f2b58f422b4c}</Project>
+      <Name>LM.Framework</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
