--- a/LM.Framework/LM.Framework.csproj
+++ b/LM.Framework/LM.Framework.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9B022C8D-8176-430F-A6B7-A347A75DC4F5}</ProjectGuid>
+    <ProjectGuid>{BF63F401-245A-44C8-AF1A-F2B58F422B4C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LM.Data</RootNamespace>
-    <AssemblyName>LM.Data</AssemblyName>
+    <RootNamespace>LM.Framework</RootNamespace>
+    <AssemblyName>LM.Framework</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -35,31 +35,28 @@
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Transactions" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Context\LmContext.cs" />
-    <Compile Include="Mappings\EmployeeConfiguration.cs" />
-    <Compile Include="Mappings\EmployeeLeaveConfiguration.cs" />
-    <Compile Include="Mappings\LeaveConfiguration.cs" />
-    <Compile Include="Mappings\MonthlyLeaveConfiguration.cs" />
-    <Compile Include="Model\BaseEntity.cs" />
-    <Compile Include="Model\Employee.cs" />
-    <Compile Include="Model\EmployeeLeave.cs" />
-    <Compile Include="Model\Enums.cs" />
-    <Compile Include="Model\Holiday.cs" />
-    <Compile Include="Model\Leave.cs" />
-    <Compile Include="Model\MonthlyLeave.cs" />
+    <Compile Include="Data\Entity\ExpressionExtensions.cs" />
+    <Compile Include="Data\Entity\ExpressionVisitor.cs" />
+    <Compile Include="Data\Entity\GenericRepository.cs" />
+    <Compile Include="Data\Entity\ParameterRebinder.cs" />
+    <Compile Include="Data\Entity\QueryableSpecification.cs" />
+    <Compile Include="Data\Entity\QueryableSpecificationResult.cs" />
+    <Compile Include="Data\Entity\SimpleQuerySpecification.cs" />
+    <Compile Include="Data\Entity\Transaction.cs" />
+    <Compile Include="Data\Entity\UnitOfWork.cs" />
+    <Compile Include="Data\Repository\GenericFetchStrategy.cs" />
+    <Compile Include="Data\Repository\IFetchStrategy.cs" />
+    <Compile Include="Data\Repository\IRepository.cs" />
+    <Compile Include="Data\Repository\ISpecification.cs" />
+    <Compile Include="Data\Repository\ISpecificationLocator.cs" />
+    <Compile Include="Data\Repository\ISpecificationResult.cs" />
+    <Compile Include="Data\Repository\ITransaction.cs" />
+    <Compile Include="Data\Repository\IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
