--- a/LM.Data.EF/LM.Data.EF.csproj
+++ b/LM.Data.EF/LM.Data.EF.csproj
@@ -48,13 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IEmployeeSpecification.cs" />
     <Compile Include="LMUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Specifications\EmployeeSpecification.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Contracts\" />
-    <Folder Include="Specifications\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\LM.Data\LM.Data.csproj">
       <Project>{9b022c8d-8176-430f-a6b7-a347a75dc4f5}</Project>
