--- a/LM.WpfClient/App.config
+++ b/LM.WpfClient/App.config
@@ -6,7 +6,7 @@
   </configSections>
 
   <connectionStrings>
-    <add name="LmContext" connectionString="server=SAURABH-SINGH\SQLEXPRESS;database=LeaveManager;User Id=sa;Password=mypass;" providerName="System.Data.SqlClient"/>
+    <add name="LmContext" connectionString="server=SAURABH-SINGH\SQLEXPRESS;database=LeaveManager;User Id=sa;Password=mypass;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <startup>
@@ -18,4 +18,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Windows.Interactivity" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
