--- a/LM.WpfClient/packages.config
+++ b/LM.WpfClient/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
+  <package id="Fluent.Ribbon" version="2.0.2" targetFramework="net45" />
   <package id="MvvmLight" version="4.2.32.7" targetFramework="net45" />
   <package id="MvvmLightLibs" version="4.4.32.7" targetFramework="net45" />
 </packages>
