--- a/LM.WpfClient/LM.WpfClient.csproj
+++ b/LM.WpfClient/LM.WpfClient.csproj
@@ -209,7 +209,9 @@
   <ItemGroup>
     <Resource Include="Images\ico_employee_large.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\ico_Main.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
